Fixed WAVE UI not working with new wave-service.js API - adapted new event listeners - added new APIs to remove when importing dpctf tests - formatted code using prettier - removed some console.logs

--- a/tools/wave/www/index.html
+++ b/tools/wave/www/index.html
@@ -240,8 +240,8 @@
 						window.open(configurationUrl, "_blank");
 					};
 
-					WaveService.connectHttpPolling(token);
-					WaveService.onMessage(function(message) {
+					WaveService.addSessionEventListener(token, function(message) {
+            console.log(message)
 						if (message.type === "resume") {
 							var resumeToken = message.data;
 							location.href = WEB_ROOT + "next.html?token=" + resumeToken;
