Implemented general API configuration endpoint
Test Runner
- added api/configuration endpoint
- added GeneralApiHandler
- fixed results api read results endpoint to return 404 if no session
  could be found
- removed read results config endpoint

Documentation
- added documentation for the configuration endpoint of the general api
- removed documentation for import enabled endpoint of results api
- removed documentation for config endpoint of results api

wave-service.js
- implemented function for general configuration in wave-service.js
- updated WMAS frontend to use new configuration function instead of old
  results config function

--- a/tools/wave/www/overview.html
+++ b/tools/wave/www/overview.html
@@ -128,8 +128,8 @@
               })
             );
           });
-          WaveService.readResultsConfig(function(config) {
-            resultsUi.state.importResultsEnabled = config.importEnabled;
+          WaveService.readConfiguration(function(config) {
+            resultsUi.state.importResultsEnabled = config.importResultsEnabled;
             resultsUi.state.reportsEnabled = config.reportsEnabled;
             resultsUi.renderManageSessions();
           });
