Using ISO 8601 date format instead of milliseconds
Test Runner
- improved precision of internal date handling
- explicitly adding data fields for returned read session and read
  session status endpoints payload instead of removing unwanted
- returning dates in ISO 8601 format in REST API

Documentation
- added documentation for labels field in read session endpoint
- updated documentation to ISO 8601 date formats
- added date_created to read session documentation

Tests
- updated REST API tests to new ISO 8601 format
- updated REST API tests to changes in returned payload of read session
  and read session status endpoints
- updated REST API tests structure of create session, read session and
  read session status tests

WMAS Frontend
- reading expiration date from session status instead of configuration
  in index.html
- formatted index.html using prettier

wave-service.js
- parsing utc iso strings

--- a/tools/wave/www/configuration.html
+++ b/tools/wave/www/configuration.html
@@ -116,6 +116,7 @@
 										configurationUi.openResultsPage(token);
 										return;
 									}
+                  configurationUi.state.status = status;
 
 									WaveService.readSession(token, function(configuration) {
 										if (
@@ -130,7 +131,7 @@
 										configurationUi.state.configuration = configuration;
 										setTimeout(
 											configurationUi.handleExpiration,
-											configuration.expirationDate - Date.now()
+											status.expirationDate.getTime() - Date.now()
 										);
 										configurationUi.renderSessionConfiguration();
 									});
@@ -443,6 +444,7 @@
         },
         renderSessionConfiguration: function() {
           var configuration = configurationUi.state.configuration;
+          var status = configurationUi.state.status;
           var sessionConfigurationView = UI.createElement({});
           var sessionConfiguration = UI.getElement("session-configuration");
           sessionConfiguration.innerHTML = "";
@@ -525,9 +527,7 @@
                   className: "field",
                   children: {
                     className: "control",
-                    text: new Date(
-                      configuration.expirationDate
-                    ).toLocaleString()
+                    text: status.expirationDate.toLocaleString()
                   }
                 }
               }
