Fixed readConfiguration function of wave-service.js - renamed readConfiguration to readStatus - calling updated status endpoint of General API - increased patch number in version string

--- a/tools/wave/www/overview.html
+++ b/tools/wave/www/overview.html
@@ -128,7 +128,7 @@
               })
             );
           });
-          WaveService.readConfiguration(function(config) {
+          WaveService.readStatus(function(config) {
             resultsUi.state.importResultsEnabled = config.importResultsEnabled;
             resultsUi.state.reportsEnabled = config.reportsEnabled;
             resultsUi.renderManageSessions();
