--- a/tools/wave/www/comparison.html
+++ b/tools/wave/www/comparison.html
@@ -65,7 +65,7 @@
         tokens = tokens ? tokens.split(",") : [];
         const refTokens = reftokens ? reftokens.split(",") : [];
         if (tokens) {
-          WaveService.readConfiguration(function(config) {
+          WaveService.readStatus(function(config) {
             comparisonUi.state.reportsEnabled = config.reportsEnabled;
             comparisonUi.render();
           });
